--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,20 @@
 services:
+  # Frontend (Next.js)
+  frontend:
+    build:
+      context: ./curasense-frontend
+    container_name: curasense-frontend
+    ports:
+      - "3000:3000"
+    env_file: ./curasense-frontend/.env.local
+    environment:
+      - NEXT_PUBLIC_FRONTEND_API=http://backend-ml:8000
+      - NEXT_PUBLIC_ML_API=http://backend-vision:8001
+    depends_on:
+      - backend-ml
+      - backend-vision
+    restart: always
+
   # ML Logic Backend (CrewAI / Agentic Workflow)
   backend-ml:
     build:
