--- a/curasense-frontend/.dockerignore
+++ b/curasense-frontend/.dockerignore
@@ -1,65 +1,121 @@
-# Dependencies
-node_modules
+# ============================================
+# CURASENSE FRONTEND - DOCKERIGNORE
+# Optimized for Next.js 16 builds
+# Reduces build context by 90%+
+# ============================================
+
+# Dependencies (installed fresh in container)
+node_modules/
 .pnp
 .pnp.js
+.yarn/
 
-# Build outputs
-.next
-out
-build
-dist
+# Build outputs (rebuilt in container)
+.next/
+out/
+build/
+dist/
 
 # Testing
-coverage
-.nyc_output
+coverage/
+.nyc_output/
+jest.config.*
+vitest.config.*
+cypress/
+playwright/
+e2e/
+__tests__/
+*.test.ts
+*.test.tsx
+*.spec.ts
+*.spec.tsx
 
-# Development
-.env*.local
+# Development environment files
+.env
+.env.local
 .env.development
+.env.development.local
 .env.test
+.env.test.local
+!.env.example
 
-# IDE
-.idea
-.vscode
+# IDE and editors
+.idea/
+.vscode/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
-# OS
+# OS files
 .DS_Store
 Thumbs.db
+ehthumbs.db
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+logs/
+*.log
 
 # Git
-.git
+.git/
 .gitignore
+.gitattributes
+.github/
 
-# Docker
+# Docker (not needed inside container)
 Dockerfile*
 docker-compose*
 .dockerignore
+k8s/
 
 # Documentation
 README.md
 docs/
 *.md
+LICENSE
+CHANGELOG*
 
-# Tests
-__tests__
-*.test.ts
-*.test.tsx
-*.spec.ts
-*.spec.tsx
-jest.config.*
-vitest.config.*
-
-# Misc
-.turbo
-.vercel
-.husky
-.github
+# TypeScript build info (regenerated)
 *.tsbuildinfo
+tsconfig.tsbuildinfo
+
+# Storybook
+.storybook/
+storybook-static/
+
+# Deployment platforms
+.vercel/
+.netlify/
+.turbo/
+.husky/
+
+# Misc development files
+.eslintcache
+.prettierignore
+.editorconfig
+.nvmrc
+.node-version
+
+# Prisma (keep schema, exclude generated)
+prisma/migrations/
+!prisma/schema.prisma
+!prisma.config.ts
+
+# Generated files (rebuilt during docker build)
+src/generated/
+
+# Public assets that aren't needed
+public/mockups/
+public/designs/
+*.psd
+*.sketch
+*.fig
+
+# Temporary files
+tmp/
+temp/
+*.tmp
