feat: Configure Vercel deployment with Neon serverless DB
- Add @neondatabase/serverless for better Vercel cold start performance
- Update prisma.ts to use Neon serverless Pool with optimized settings
- Create vercel.json with serverless function configuration
- Update package.json with prisma generate in build scripts
- Update .env.example with Vercel deployment documentation
- Configure single connection pool for serverless functions

--- a/curasense-frontend/package.json
+++ b/curasense-frontend/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "eslint",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "vercel-build": "prisma generate && next build"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
